:green_heart: systematic check of the output values, instead of just comparing files (in order to discard machine epsilon)

--- a/docker/README
+++ b/docker/README
@@ -5,3 +5,5 @@ docker build -t immc/flups-valid:v0.1 .
 docker login
 docker push immc/flups-valid
 
+# local test:
+docker run -it --rm immc/flups-valid:v0.2
