--- a/docker/README
+++ b/docker/README
@@ -3,24 +3,23 @@
 # build image for VS Code
 
 ```bash
-hpccm --recipe docker1.py > Dockerfile_daily && cat docker_ext >> Dockerfile_daily
-
-docker build --ssh default -f Dockerfile_daily -t vanreeslab/flups_daily:v0.1 .
+hpccm --recipe docker1.py > Dockerfile && cat docker_ext >> Dockerfile
+docker build --ssh default -f Dockerfile -t vanreeslab/flups:v1.1 .
 docker login
-docker push vanreeslab/flups_daily:v0.1
+docker push vanreeslab/flups:v1.1
 ```
 
 
-# build image for validation
+# # build image for validation
 
-# docker build -t immc/flups-valid:v0.4 .
-docker build -t vanreeslab/flups:v0.5 .
-#v0.3 has valgrind but not metis
-# v0.5 has metis and google test but not valgrind 
+# # docker build -t immc/flups-valid:v0.4 .
+# docker build -t vanreeslab/flups:v0.5 .
+# #v0.3 has valgrind but not metis
+# # v0.5 has metis and google test but not valgrind 
 
-# push image to docker-hub
-docker login
-docker push vanreeslab/flups:v0.5
+# # push image to docker-hub
+# docker login
+# docker push vanreeslab/flups:v0.5
 
-# local test:
-docker run -it --rm vanreeslab/flups:v0.5
+# # local test:
+# docker run -it --rm vanreeslab/flups:v0.5
